--- a/NodeJS/.env
+++ b/NodeJS/.env
@@ -1,4 +1,4 @@
 FOO=bar
 NODE_ENV=production
-consumerKey = 'fdcuhtjKYqnpoIrvAaQK';
-consumerSecret = 'UkMawUgGphTQmPjFIzfItIASxmwMjUvf';
+consumerKey = '##########################';
+consumerSecret = '########################';
